added swager permisions
