# src/Resources/auth.py
@@ -1,11 +1,13 @@
 import datetime
 from functools import wraps
+
 import jwt
 from flask import request, jsonify
 from flask_restful import Resource
 from marshmallow import ValidationError
 from sqlalchemy.exc import IntegrityError
 from werkzeug.security import check_password_hash
+
 from src import db, app
 from src.models import User
 from src.schemas.user import UserSchema
@@ -29,22 +31,28 @@ class AuthRegister(Resource):
 
 
 class AuthLogin(Resource):
-    def get(self):
-        auth = request.authorization
-        if not auth:
-            return "", 401, {"WWW-Authenticate": "Basic realm='Authentication required'"}
-        user = db.session.query(User).filter_by(username=(auth.get('username', ''))).first()
-        if not user or not check_password_hash(user.password, auth.get('password', '')):
-            return "", 401, {"WWW-Authenticate": "Basic realm='Authentication required'"}
+    def post(self):
+
+        data = request.get_json()
+        username = data.get('username')
+        password = data.get('password')
+
+        if not username or not password:
+            return {"message": "Username and password are required"}, 400
+
+        user = db.session.query(User).filter_by(username=username).first()
+        if not user or not check_password_hash(user.password, password):
+            return {"message": "Invalid credentials"}, 401
+
         token = jwt.encode(
             {
                 "user_id": user.uuid,
-                "exp": datetime.datetime.now() + datetime.timedelta(hours=1)
+                "exp": datetime.datetime.now() + datetime.timedelta(minutes=5)
             }, app.config['SECRET_KEY']
         )
         return jsonify(
             {
-                "token": token.decode('utf-8')
+                "token": token
             }
         )
 
@@ -52,16 +60,20 @@ class AuthLogin(Resource):
 def token_required(func):
     @wraps(func)
     def wrapper(self, *args, **kwargs):
-        token = request.headers.get('X-API-KEY', '')
+        token = request.headers.get('Authorization', '')
+        if token.startswith("Bearer "):
+            token = token[len("Bearer "):]
         if not token:
-            return "", 401, {"WWW-Authenticate": "Basic realm='Authentication required'"}
+            return "No Token", 401
         try:
-            uuid = jwt.decode(token, app.config['SECRET_KEY'])['user_id']
+            uuid = jwt.decode(token, app.config['SECRET_KEY'], algorithms="HS256")['user_id']
         except (KeyError, jwt.ExpiredSignatureError):
-            return "", 401, {"WWW-Authenticate": "Basic realm='Authentication required'"}
+            return "", 401
+        except jwt.DecodeError as e:
+            return (f"Error decoding token: {str(e)}"), 401
         user = db.session.query(User).filter_by(uuid=uuid).first()
         if not user:
-            return "", 401, {"WWW-Authenticate": "Basic realm='Authentication required'"}
+            return "", 401
         return func(self, *args, **kwargs)
 
     return wrapper
